--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -493,8 +493,10 @@ body.nav-active { overflow: hidden; }
 }
 
 .service-card .card-icon {
-  width: 60px;
-  height: 60px;
+  /* width: 60px;
+  height: 60px; */
+  height: 100px;
+  width: 170px;
   background-color: var(--violet-blue-crayola);
   display: grid;
   place-items: center;
@@ -502,6 +504,14 @@ body.nav-active { overflow: hidden; }
   font-size: 2.5rem;
   border-radius: var(--radius-circle);
   margin-inline: auto;
+}
+.card-icon .service-icon{
+  height: 100px;
+  width: 170px;
+}
+.card-icon .service-iconM{
+  height: 100px;
+  width: 130px;
 }
 
 .service-card .card-icon ion-icon { --ionicon-stroke-width: 50px; }
